Received continual errors when attempting to do this, and had to turn towards AI to correct code.

--- a/HW4linearregression.qmd
+++ b/HW4linearregression.qmd
@@ -56,3 +56,11 @@ library(tidycensus)
 ```{r}
 census_api_key("863d1963fff9954a0f7bfc13d7ea0dedc02a8034")
 ```
+
+```{r}
+cbsa_population <- get_acs(geography = "metropolitan statistical area/micropolitan statistical area", variables = "B01003_001", year = 2022) %>%
+  rename(cbsa = GEOID, population = estimate)
+
+head(cbsa_population)
+
+```
