--- a/HW4linearregression.qmd
+++ b/HW4linearregression.qmd
@@ -58,7 +58,7 @@ census_api_key("863d1963fff9954a0f7bfc13d7ea0dedc02a8034")
 ```
 
 ```{r}
-cbsa_population <- get_acs(geography = "metropolitan statistical area/micropolitan statistical area", variables = "B01003_001", year = 2022) %>%
+cbsa_population <- get_acs(geography = "metropolitan statistical area/micropolitan statistical area", variables = "B01003_001", year = 2022) |>
   rename(cbsa = GEOID, population = estimate)
 
 head(cbsa_population)
@@ -82,4 +82,13 @@ destination_population_data <- origin_population_data |>
 
 head(destination_population_data)
 
+```
+
+```{r}
+cbsa_summary <- destination_population_data |>
+  group_by(origin_cbsa, dest_cbsa) |>
+  summarize(total_passengers = sum(passengers), .groups = 'drop') |>
+  ungroup()
+
+head(cbsa_summary)
 ```
