--- a/HW4linearregression.qmd
+++ b/HW4linearregression.qmd
@@ -116,3 +116,17 @@ ggplot(cbsa_summary, aes(x = distancemiles, y = total_passengers)) +
        x = "Distance",
        y = "Total Pass")
 ```
+
+```{r}
+#Extra credit attempt
+
+census_api_key("863d1963fff9954a0f7bfc13d7ea0dedc02a8034")
+
+
+cbsa_age <- get_acs(geography = "metropolitan statistical area/micropolitan statistical area", 
+                    variables = "B01002_001", year = 2022) |>
+  rename(cbsa = GEOID, median_age = estimate)
+
+head(cbsa_age)
+
+```
