used bedrooms_model = lm(amt_price~heatedarea+year_of_sale+bedrooms, no_outliers) summary(bedrooms_model) as reference, but had to add in the data = in order to have total passengers not result in an error

--- a/HW4linearregression.qmd
+++ b/HW4linearregression.qmd
@@ -190,3 +190,8 @@ cbsa_summary <- data |>
 
 head(cbsa_summary)
 ```
+
+```{r}
+passenger_volume_model = lm(total_passengers~origin_pop+dest_pop+distancemiles, data = cbsa_summary)
+summary(passenger_volume_model)
+```
