I believe the table was made correctly, had to look various aspects up due to errors. Received a warning regarding the prediction having doubtful cases, which I think could tie into the second question regarding nonsensical results for q4.

--- a/HW4linearregression.qmd
+++ b/HW4linearregression.qmd
@@ -295,3 +295,17 @@ routes <- routes |>
   left_join(cbsa_age, by = c("dest_cbsa" = "cbsa")) |>
   rename(dest_age = median_age)
 ```
+
+```{r}
+X_new <- routes |>
+  select(origin_pop, dest_pop, origin_age, distancemiles)
+```
+
+```{r}
+routes$predicted_passengers <- predict(passenger_volume_model, newdata = X_new)
+```
+
+```{r}
+routes |>
+  select(origin_cbsa, dest_cbsa, distancemiles, predicted_passengers)
+```
