removing things that would mess up the code from running continuously, and I believe my Rstudio has crashed as well

--- a/HW4linearregression.qmd
+++ b/HW4linearregression.qmd
@@ -45,11 +45,6 @@ print(rdu_saturation_table)
 ```
 
 ```{r}
-install.packages("tidycensus")
-
-```
-
-```{r}
 library(tidycensus)
 ```
 
@@ -213,6 +208,14 @@ head(cbsa_age)
 ```
 
 ```{r}
+cbsa_population <- cbsa_population |>
+  mutate(cbsa = as.character(cbsa))
+
+cbsa_age <- cbsa_age |>
+  mutate(cbsa = as.character(cbsa))
+```
+
+```{r}
 origin_pop <- cbsa_population |>
   rename(origin_cbsa = cbsa, origin_pop = population)
 
@@ -226,16 +229,39 @@ dest_age <- cbsa_age |>
   rename(dest_cbsa = cbsa, dest_age = median_age)
 ```
 
-```{r}
-data <- data |>
-  left_join(origin_pop, by = "origin_cbsa") |>
-  left_join(dest_pop, by = "dest_cbsa")
+```{# Convert origin_cbsa and dest_cbsa to character type in the data frame}
+data <- data %>%
+  mutate(origin_cbsa = as.character(origin_cbsa),
+         dest_cbsa = as.character(dest_cbsa))
 
-data <- data |>
-  left_join(origin_age, by = "origin_cbsa") |>
-  left_join(dest_age, by = "dest_cbsa")
+# Merge population data for origin CBSA and rename immediately
+data <- data %>%
+  # Drop any existing column with the same name if it exists
+  select(-origin_pop, -population, -dest_pop) %>%
+  left_join(cbsa_population, by = c("origin_cbsa" = "cbsa")) %>%
+  rename(origin_pop = population)
+
+# Merge population data for destination CBSA and rename immediately
+data <- data %>%
+  select(-dest_pop, -population) %>%
+  left_join(cbsa_population, by = c("dest_cbsa" = "cbsa")) %>%
+  rename(dest_pop = population)
+
+# Merge median age data for origin CBSA and rename immediately
+data <- data %>%
+  select(-origin_age, -median_age) %>%
+  left_join(cbsa_age, by = c("origin_cbsa" = "cbsa")) %>%
+  rename(origin_age = median_age)
+
+# Merge median age data for destination CBSA and rename immediately
+data <- data %>%
+  select(-dest_age, -median_age) %>%
+  left_join(cbsa_age, by = c("dest_cbsa" = "cbsa")) %>%
+  rename(dest_age = median_age)
 
 head(data)
+
+
 ```
 
 ```{r}
