Had to fix an error where destination data was showing up as NA for everything, unsure how that happened. Continually made errors until asking a friend for help with understanding chatgpt's explanation of the origin of the error.

--- a/HW4linearregression.qmd
+++ b/HW4linearregression.qmd
@@ -230,32 +230,37 @@ dest_age <- cbsa_age |>
 ```
 
 ```{r}
-data <- data
+#ensure 'origin_cbsa' and 'dest_cbsa' are chars
+data <- data |>
   mutate(origin_cbsa = as.character(origin_cbsa),
          dest_cbsa = as.character(dest_cbsa))
 
+#join pop data for origin, rename, and remove redundant columns 
 data <- data |>
-  select(-origin_pop, -population, -dest_pop) |>
+  select(-dplyr::any_of(c("origin_pop", "population", "dest_pop"))) |>
   left_join(cbsa_population, by = c("origin_cbsa" = "cbsa")) |>
   rename(origin_pop = population)
 
+#join pop data for destination, rename, and remove redundant columns 
 data <- data |>
-  select(-dest_pop, -population) |>
+  select(-dplyr::any_of(c("dest_pop", "population"))) |>
   left_join(cbsa_population, by = c("dest_cbsa" = "cbsa")) |>
   rename(dest_pop = population)
 
+#join median age data for origin, rename, and remove redundant columns
 data <- data |>
-  select(-origin_age, -median_age) |>
+  select(-dplyr::any_of(c("origin_age", "median_age"))) |>
   left_join(cbsa_age, by = c("origin_cbsa" = "cbsa")) |>
   rename(origin_age = median_age)
 
+#remove redundant columns
 data <- data |>
-  select(-dest_age, -median_age) |>
+  select(-dplyr::any_of(c("dest_age", "median_age"))) |>
   left_join(cbsa_age, by = c("dest_cbsa" = "cbsa")) |>
   rename(dest_age = median_age)
 
+#view data
 head(data)
-
 
 ```
 
